# GameEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/: entity.cpp  entity.h  game.cpp  game.h  main.cpp
